--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.25.0",
-    "playwright": "1.22.2"
+    "playwright": "1.22.2",
+    "xlsx": "^0.18.5"
   }
 }
